# lua-kitchen-back

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/api/routes/: health.py  recipes.py
app/database/: crud.py  init_db.py  session.py
app/models/: ingredient.py  recipe.py  recipe_ingredient.py
app/schemas/: __init__.py  ingredient.py  recipe.py  recipe_ingredient.py
tests/: conftest.py  test_api_create_recipe.py  test_api_delete_recipe.py  test_create_recipe_api.py  test_database_select.py  test_recipe_uuid_times_made.py
